# feelthecrowd

./: CMakeLists.txt  README.md  SETUP.md
crowd_streamlink/: README.md  main.py  requirements.txt
nvidia/: README.md
nvidia/cmake/: FindTensorRT.cmake
nvidia/nvvfx/src/: nvCVImageProxy.cpp
nvidia/samples/: CMakeLists.txt
nvidia/samples/AigsEffectApp/: AigsEffectApp.cpp  AigsEffectApp.h  CMakeLists.txt
obs/: CMakeLists.txt  README.md
obs/data/locale/: en-US.ini
obs/src/: CMakeLists.txt  greenscreen-plugin.cpp  greenscreen-source.cpp
